# tic-tac-toe

./: LICENSE  makefile  pyproject.toml
src/: app.py
src/datasource/: data_mapper.py  repository.py  storage.py
src/datasource/models/: game.py
src/datasource/repositories/: repository.py
src/datasource/services/: data_service.py
src/di/: Container.py
src/domain/models/: board.py  game.py
src/domain/services/: game_service.py  minimax.py
src/web/: controller.py  web_mapper.py
src/web/models/: board.py  game.py
src/web/templates/: all_games.html  board.html  index.html  init.html  navigation_bar.html
