[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic_tac_toe"
version = "0.1.0"
description = "Крестики-нолики с веб-интерфейсом"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
]
dependencies = ["flask>=2.0"]

[project.scripts]
tic-tac-toe = "src.web.controller:main"

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]
